--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.25.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
