--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "server",
+  "name": "gdevakrishnan-server",
   "version": "1.0.0",
+  "description": "Server for my personal portfolio",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Devakrishnan Gopal",
+  "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "nodemailer": "^6.9.14"
   }
 }
