--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-EMAIL = "gdevakrishnan700@gmail.com"
-PASSWORD = "qbff bylb ntru ltsn"
+EMAIL = "YOUR_RECEIVING_MAIL_Id"
+PASSWORD = "askme"
 PORT = 5000
